--- a/InfluxDBClient/InfluxDBClient.csproj
+++ b/InfluxDBClient/InfluxDBClient.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EpochHelper.cs" />
+    <Compile Include="IInfluxDBClient.cs" />
     <Compile Include="InfluxDBClient.cs" />
     <Compile Include="InfluxServerInfo.cs" />
     <Compile Include="Serie.cs" />
